sass/style.scss
/*
* Theme Name: HackerYou Starter Theme
* Theme URI: http://hackeryou.com;
* Description: Starter theme for building any website. Created by HackerYou. * Rename this to your own theme page.
* Version: 1.0
* Author: HackerYou
* Author URI: http://hackeryou.com
*/

@import 'normalize';
@import 'breakpoint';
@import 'typography';
@import 'navigation';
@import 'sidebar';
@import 'comments';
@import 'footer';
@import 'slider';

/*
====================================
Default Styling
====================================
*/

html {
	height: 100%;
	box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

img {
	max-width: 100%;
}

hr {
	background: #ccc;
	border:none;
	height:1px;
}

body {
	color: #333;
	// min-height: 100%;
	position: relative;
	// padding-bottom: 96px;
	font-family: 'Assistant', sans-serif;
}

label, button, h1,h2, h3,h4, h5, h6, input {
	font-family: 'Raleway', sans-serif;
}

.container {
	margin: 0 auto;
	max-width: 1250px;
	padding:0 2.5%;
	@include breakpoint(phone) {
		margin: 0 auto;
		padding:0 2.5%;
	}
	&.logged-in {
		max-width:1350px;
		padding:0 2.5%;
		@include breakpoint(standard) {
			padding:0 5%;
		}
	}
}

.content {

	p {
	a {
		text-decoration: underline;
	}

	}

	@include breakpoint(standard) {
		// margin: 0 0 100px;
	}
}

.no-padding .content {
	@include breakpoint(standard) {
		margin: 0;
	}
}

.full {
	width: 100%;
}

.button-white {
	background: #fff;
	color: red;
	font-family: 'Raleway', sans-serif;
	padding:10px 15px;
}

#gform_next_button_1_12,
#gform_previous_button_1,
#gform_submit_button_1,
.button-green,
input[type=submit],
input[type=button]  {
	background: #27B489;
	border-radius: 3px;
	border:none;
	color: #fff;
	font-size: 1.4rem;
	font-weight: 800;
	padding: 10px 25px;
	text-transform: uppercase;
	transition:0.3s;

	&:hover {
		background: #0B8C60;
	}
}

.none {
	display: none;

	&.fa {
		display: none;
	}
}

input {
	padding:10px;
}

select {
	height: 32px;
	border-radius: 0!important;
}

.main {
	min-height: calc(100vh - 350px);
	padding: 50px 0;

	@include breakpoint(standard) {
		padding: 30px 0;
	}
}

.main.no-padding {
	padding: 50px 0 0;
	@include breakpoint(phone) {
		padding: 30px 0 0;
	}
}

.main.no-hero {
	margin-top: 100px;
}

@mixin word-wrap() {
  overflow-wrap: break-word;
  word-wrap: break-word;
  -ms-word-break: break-all;
  word-break: break-word;
  -ms-hyphens: auto;
  -moz-hyphens: auto;
  -webkit-hyphens: auto;
  hyphens: auto;
  // @include word-wrap()
}

.admin-bar {
	margin-top: -32px;
	@include breakpoint(wpadminsmall) {
		margin-top: -46px;
	}
}


#wpadminbar {
	@media (max-width: 600px)  {
		position:fixed!important;
	};
}

.screen-reader-text {
    position: absolute !important;
    height: 1px; width: 1px;
    overflow: hidden;
    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
    clip: rect(1px, 1px, 1px, 1px);
}
/*
====================================
HOME PAGE Styling
====================================
*/

.home-hero {
	height: 600px;
	margin-top: 96px; // height of header.
	padding: 6% 0;
	overflow:visible!important;
	z-index: 0!important;

	@include breakpoint('640') {
		height: 740px;
	}

	.bx-viewport {
		height: 600px;
		overflow: visible!important;
	}

	.hero-content {
		background: rgba(28,160,113,0.7);
		padding: 2.5% 7% 3%;
		max-width: 800px;
		width: 60%;

		@include breakpoint(standardNarrow) {
			width: 100%;
		}

		h2 {
			color: #fff;
			font-size: 4.8rem;
			font-weight: 700;
			margin-bottom: 20px;
		}
		h3 > div {
			color: #fff;
			font-size: 25px;
			font-weight: 500;
			strong {
				font-weight: 700;
			}
		}
		a {
			background: #fff;
			border-radius: 3px;
			color: #464646;
			display: inline-block;
			font-size: 1.4rem;
			font-weight: 800;
			margin-top: 20px;
			padding: 15px 15px;
			text-transform: uppercase;
		}
	}
}

.four-columns {
	margin: 50px 0;

	ul {
		display:flex;
		flex-wrap: wrap;
		justify-content: space-between;
		padding-left: 0;

		@include breakpoint(tablet) {
			justify-content: space-around;
		}

		li {
			list-style: none;
			// min-width: 297px;
			width: 22%;

			@include breakpoint(tabletsmall) {
				width: calc(100% / 2.5);
			}

			@include breakpoint("620") {
				min-width: initial;
				width: 75%;
			}

			&:nth-child(2) h2 {
				margin: -20px auto 40px;
			}

			img {
				display: block;
				height: auto;
				margin: 0 auto 20px;
				width: 50%;
			}

			h2 {
				font-size: 2rem;
				height: 80px;
				margin: 0 auto 20px;
				text-align: center;
				width: 80%;
			}
		} // li
	} // ul

	.home & {
		ul li p {
			text-align: center;
		}
	}
} // .four-columns

.three-columns {
	background:  #F4F3F2;
	padding: 50px 0;
	width: 100%;

	.container {
		display: flex;
		justify-content: space-between;

		@include breakpoint(tabletsmall) {
			flex-wrap: wrap;
			// justify-content: center;
		}

		img {
			min-height: 250px;
			object-fit: cover;
		}

		.box {
			background: #fff;
			border: 1px solid #E6E6E6;
			box-shadow: 0 0 2px 1px lightgrey;
			width: calc(100% / 3.33);

			@include breakpoint(tabletsmall) {
				margin-bottom: 20px;
				width: calc((100% / 2) - 10px);
			}

			@include breakpoint("620") {
				width: 100%;
			}

			&__text-content {
				padding:30px;
				min-height:255px;
				display: flex;
				flex-direction: column;
				justify-content: space-between;

				a {
					background: #27b489;
					border-radius: 3px;
					color: #fff;
					display: inline-block;
					font-family: 'Raleway', sans-serif;
					font-size: 1.4rem;
					font-weight: 800;
					padding: 15px 15px;
					text-transform: uppercase;
				}
			}
		}
	}
}
/* ... */

